# Proyecto_Analisis_BioBART

./: .gitignore  README.md  biobart_inferencia.ipynb  biobart_inferencia_final.ipynb  biobart_inferencia_final_(1).ipynb  index.html  pyproject.toml  requirements.txt
docs/: Trabajo Final Procesamiento de Datos Secuenciales.docx  guia_llm_biobart.html
notebooks/: README.md  biobart_inferencia.ipynb
streamlit_app/: .gitignore  Makefile  README.md  app.py  config.py  inference.py  model_loader.py  pyproject.toml
